k8s/base/producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-producer
  labels:
    app.kubernetes.io/name: fraud-producer
    app.kubernetes.io/part-of: fraud-detection
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fraud-producer
  ports:
    - name: http
      port: 8001
      targetPort: http
